# auto_review

./: .auto_review.example.yaml  .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  .mergify.yml  .npmrc  .tmuxinator.yml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  bacon.toml  deny.toml  flake.nix  kilo.json  lefthook.yml  opencode.json  renovate.json  rust-toolchain.toml
.claude/: ralph-loop.local.md  settings.json
.claude/hooks/: review-reply-protocol.sh  tdd-guardrail.sh
.codex/: config.toml  hooks.json
.codex/agents/: architecture-reviewer.toml  docs-operator-reviewer.toml  forgejo-feedback-processor.toml  plan-advisor.toml  rgr-diagnostic-implementer.toml  rgr-implementation-reviewer.toml  rgr-test-author.toml  (+3 more)
.forgejo/: pull_request_template.md
.kilo/: package-lock.json  package.json
.opencode/: package-lock.json  package.json
.pi/: APPEND_SYSTEM.md  settings.json
.pi-lens/: lsp.json
bench/: README.md
crates/ar-agentcore/: Cargo.toml
crates/ar-agentcore/src/: lib.rs
crates/ar-agentcore/tests/: dynamodb_idempotency.rs  idempotency.rs  ping.rs  semantic_review.rs
crates/ar-chat/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-chat/src/: command.rs  handler.rs  lib.rs
crates/ar-chat/tests/: review_correction.rs
crates/ar-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-cli/src/: bench.rs  cli.rs  commands.rs  main.rs
crates/ar-forge/: Cargo.toml
crates/ar-forge/src/: lib.rs
crates/ar-forge/tests/: review_host_contract.rs
crates/ar-forgejo/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-forgejo/src/: client.rs  init.rs  lib.rs  types.rs  webhook.rs
crates/ar-gateway/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-gateway/src/: config.rs  dedup.rs  hmac.rs  lib.rs  main.rs  metrics.rs  poller.rs  ratelimit.rs  startup.rs  webhook.rs
crates/ar-gateway/tests/: agentcore_deploy_contract.rs  chat_comment_dedup.rs  ci_review_secrets.rs  ci_workflow_contract.rs  embedded_oci_env.rs  forgejo_action_contract.rs  gateway_env.rs  review_requested.rs  single_binary_rollout_docs_contract.rs
crates/ar-github/: Cargo.toml
crates/ar-github/src/: lib.rs  webhook.rs
crates/ar-github/tests/: app_auth.rs  app_jwt.rs  pr.rs  webhook_signature.rs
crates/ar-index/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-index/src/: co_change.rs  dynamodb_learnings.rs  embed.rs  learnings.rs  lib.rs  sqlite_learnings.rs  sqlite_vector_store.rs  symbols.rs  vector_store.rs  walker.rs
crates/ar-index/tests/: dynamodb_learnings.rs
crates/ar-llm/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-llm/src/: lib.rs  openai.rs  pricing.rs  router.rs  types.rs
crates/ar-llm/tests/: pricing.rs  usage_capture.rs
crates/ar-orchestrator/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-orchestrator/src/: dispatcher.rs  dynamodb_history.rs  lib.rs  review_history.rs  sqlite_history.rs  state.rs
crates/ar-orchestrator/tests/: dynamodb_history.rs  synthetic_e2e.rs
crates/ar-prompts/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-prompts/schemas/: pre_merge_custom.json  review.json  triage.json  verification.json
crates/ar-prompts/src/: lib.rs  pre_merge_custom.rs  prompt.rs  schema.rs  triage.rs  types.rs  validate.rs  verification.rs
crates/ar-review/: CHANGELOG.md  Cargo.toml  README.md
crates/ar-review/src/: agentic_verify.rs  config.rs  context_builder.rs  diff.rs  error.rs  heal.rs  host.rs  ignored.rs  lib.rs  linter_only.rs  llm_triage.rs  mapping.rs  override_marker.rs  pipeline.rs  pre_merge.rs  pre_merge_llm.rs  rag_context.rs  routing.rs  triage.rs  verify.rs  workspace.rs  workspace_tools.rs
crates/ar-review/tests/: pr_metadata_config.rs  red_team_pipeline.rs  red_team_workspace_tools.rs  retired_linter_runtime.rs  review_mapping.rs
crates/ar-sandbox/: Cargo.toml  README.md
crates/ar-sandbox/src/: direct.rs  lib.rs  podman.rs
crates/ar-sandbox/tests/: escape.rs  red_team_argv.rs
crates/ar-tools/: Cargo.toml  README.md
crates/ar-tools/src/: actionlint.rs  ansible_lint.rs  ast_grep.rs  bandit.rs  biome.rs  buf.rs  catalog.rs  checkov.rs  cppcheck.rs  dotenv_linter.rs  eslint.rs  finding.rs  gitleaks.rs  golangci_lint.rs  gosec.rs  hadolint.rs  helm.rs  htmlhint.rs  jsonlint.rs  ktlint.rs  kubeconform.rs  languagetool.rs  lib.rs  markdownlint.rs  mypy.rs  nilaway.rs  osv_scanner.rs  oxlint.rs  phpstan.rs  pmd.rs  prettier.rs  pylint.rs  rubocop.rs  ruff.rs  runner.rs  semgrep.rs  shellcheck.rs  shfmt.rs  sqlfluff.rs  staticcheck.rs  (+9 more)
deploy/: Dockerfile  Dockerfile.sandbox  docker-compose.yml
docs/: ADR-0001-architecture.md  ADR-0001-hybrid-review-pipeline.md  ADR-0002-linter-sandbox.md  ADR-0002-sandbox.md  ADR-0003-gateway-runtime-visibility.md  ADR-0003-observability.md  ADR-0004-prometheus-metrics-observer.md  ADR-0004-vector-store.md  ADR-0005-gateway-request-boundary-defenses.md  ADR-0005-single-public-executable.md  ADR-0006-embedded-oci-gateway-isolation.md  ADR-0006-sqlite-vector-store.md  ADR-0007-podman-docker-sandbox-runtime.md  ADR-0007-x86_64-only-binary-releases.md  ADR-0008-embedded-sqlite-runtime-state.md  ADR-0009-ci-triggered-semantic-review.md  ADR-0010-retire-bundled-linter-execution.md  ADR-0011-hermetic-git-path-confinement.md  ADR-0012-gate-semantic-review-behind-ci.md  ADR-0013-single-public-executable.md  ADR-0014-embedded-oci-gateway-isolation.md  ADR-0015-x86_64-only-binary-releases.md  ADR-0016-adr-event-stream-architecture-projection.md  ADR-0017-tool-governed-adr-and-architecture-projection-workflow.md  ADR-0018-just-based-checks-and-binary-first-distribution.md  ADR-0019-delay-web-based-oauth-installer-indefinitely.md  ADR-0020-provider-neutral-review-hosts-and-agentcore-runtime.md  ADR-0021-codex-native-agent-workflow.md  ARCHITECTURE.md  BENCHMARKS.md  CLI.md  CRATES.md  DEPLOYMENT.md  E2E_RUNBOOK.md  FEASIBILITY.md  OPERATIONS.md  PI-MIGRATION-RESEARCH.md  QUICKSTART.md  RELEASE_ANNOUNCEMENT.md  THREAT-MODEL.md  (+1 more)
scripts/: release
tests/: opencode-rgr-task-gate.test.mjs  release_tooling_test.sh
(+183 files in other folders)
