[workspace]
resolver = "2"
members = [
    "crates/ar-gateway",
    "crates/ar-orchestrator",
    "crates/ar-forgejo",
    "crates/ar-llm",
    "crates/ar-index",
    "crates/ar-tools",
    "crates/ar-sandbox",
    "crates/ar-prompts",
    "crates/ar-review",
    "crates/ar-chat",
    "crates/ar-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://git.johnwilger.com/jwilger/auto_review"
# 1.88 is the floor required by transitive deps (rpassword's
# let-chains; idna 2.x via url 2.5). Single source of truth lives
# in rust-toolchain.toml; this field is the one cargo-deny / docs
# tooling reads.
rust-version = "1.88"
# Workspace crates are application code, not crates.io packages.
# `publish = false` also tells cargo-deny these are private path
# crates so wildcard internal deps (`ar-* = { path = "..." }`)
# don't trip the wildcards-deny rule.
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
url = "2.5"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"

# dev-deps shared via [workspace.dependencies] so per-crate Cargo.toml
# files can reference them with `.workspace = true`.
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
