[package]
name = "ar-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Agentic @-mention chat handler with sandboxed tool use"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ar-forgejo = { path = "../ar-forgejo" }
ar-index = { path = "../ar-index" }
ar-llm = { path = "../ar-llm" }
ar-orchestrator = { path = "../ar-orchestrator" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
