[package]
name = "ar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Operator CLI: init bot, register webhook, run-once, bench"

[[bin]]
name = "auto_review"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
ar-forgejo = { path = "../ar-forgejo" }
ar-index = { path = "../ar-index" }
ar-llm = { path = "../ar-llm" }
ar-orchestrator = { path = "../ar-orchestrator" }
ar-prompts = { path = "../ar-prompts" }
ar-review = { path = "../ar-review" }
ar-sandbox = { path = "../ar-sandbox" }
ar-tools = { path = "../ar-tools" }

[dev-dependencies]
tempfile = "3"
ar-gateway = { path = "../ar-gateway" }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
