[package]
name = "ar-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Forgejo webhook intake; HMAC verification; enqueues PR review jobs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
serde.workspace = true
serde_json.workspace = true
ar-forgejo = { path = "../ar-forgejo" }
ar-orchestrator = { path = "../ar-orchestrator" }
ar-llm = { path = "../ar-llm" }
ar-chat = { path = "../ar-chat" }
ar-index = { path = "../ar-index" }
ar-sandbox = { path = "../ar-sandbox" }
async-trait.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
wiremock.workspace = true
tempfile = "3"
