[package]
name = "ar-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Repo indexer: tree-sitter parsing, LanceDB embeddings, co-change graph"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
