[package]
name = "ar-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Repo indexer: tree-sitter parsing, embeddings, SQLite vector storage, co-change graph"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
tokio = { workspace = true, features = ["sync"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

walkdir = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
ar-llm = { path = "../ar-llm" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
