[package]
name = "ar-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Per-PR durable workflow state machine; fan-out/fan-in across pipeline stages"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ar-forgejo = { path = "../ar-forgejo" }
ar-index = { path = "../ar-index" }
ar-llm = { path = "../ar-llm" }
ar-review = { path = "../ar-review" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
# End-to-end synthetic test in tests/synthetic_e2e.rs drives the full
# webhook -> dispatcher -> review pipeline path in-process; needs the
# gateway's router, wiremock-based Forgejo, and HMAC signing.
ar-gateway = { path = "../ar-gateway" }
ar-forgejo = { path = "../ar-forgejo" }
axum.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true
