[package]
name = "ar-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Review pipeline activities: triage, summarize, review, verify, walkthrough"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
ar-forgejo = { path = "../ar-forgejo" }
ar-llm = { path = "../ar-llm" }
ar-prompts = { path = "../ar-prompts" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
