[package]
name = "ar-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Review pipeline activities: triage, summarize, review, verify, walkthrough"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
globset = "0.4"
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["process", "macros", "rt"] }
tempfile = "3"
ar-forgejo = { path = "../ar-forgejo" }
ar-index = { path = "../ar-index" }
ar-llm = { path = "../ar-llm" }
ar-prompts = { path = "../ar-prompts" }
ar-sandbox = { path = "../ar-sandbox" }
ar-tools = { path = "../ar-tools" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
