[package]
name = "ar-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Sandbox launcher: podman/youki with no-net, read-only, resource limits"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
