[package]
name = "ar-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Static-analysis runners (linters, SAST, secret scanners) and result parsers"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "macros", "rt", "fs"] }
reqwest.workspace = true
futures = "0.3"
regex = "1"
ar-sandbox = { path = "../ar-sandbox" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
wiremock.workspace = true
